--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+:root {
+  --primary-color: #05547c;
+  --secondary-color: #077bb6;
+}
+
 .App {
   text-align: center;
   max-width: 600px;
@@ -28,7 +33,11 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: var(--primary-color);
+}
+
+.App-link:hover {
+  color: var(--secondary-color);
 }
 
 @keyframes App-logo-spin {
