--- a/src/Weather.css
+++ b/src/Weather.css
@@ -6,7 +6,7 @@
 .Weather {
   border: 1px solid #dadde1;
   font-weight: 400;
-  color: #333;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
 }
 
 ul {
